# agent-venda

./: .gitignore  README.md  docker-compose.yml  env.example  get_traces.py  pyproject.toml  run.py
src/: config.py  main.py  test_langchain_langfuse.py
src/application/agents/: __init__.py  sales_agent.py
src/application/use_cases/: __init__.py  get_conversation_history.py  send_message.py
src/domain/entities/: conversation.py  message.py
src/domain/repositories/: conversation_repository.py
src/infrastructure/a2a/: __init__.py  stock_client.py
src/infrastructure/repositories/: __init__.py  redis_conversation_repository.py
src/presentation/: websocket_server.py
