[tool.poetry]
name = "agent-venda"
version = "0.1.0"
description = "Agent de venda usando LangGraph e Gemini"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.124.1"
uvicorn = {version = ">=0.34.0", extras = ["standard"]}
websockets = ">=15.0.1"
python-dotenv = "^1.0.1"

# LangChain and LangGraph
langchain = "^0.3.0"
langchain-google-genai = "^2.0.0"
langgraph = "^0.2.40"

# Google Gemini
google-generativeai = "^0.8.0"

# Redis
redis = {extras = ["hiredis"], version = "^5.2.0"}

# HTTP client
httpx = ">=0.28.1"

# Configuration and validation
pydantic = "^2.9.2"
pydantic-settings = "^2.5.0"
google-adk = {extras = ["a2a"], version = "^1.25.1"}
langfuse = {extras = ["langchain"], version = "^3.14.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.15.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Habilita regras comuns de linting
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "PLC0415",
    "TRY301", # abstract raise to inner function (too strict for simple validations)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
